[gd_scene load_steps=55 format=3 uid="uid://dmtrnvihyrtdi"]

[ext_resource type="Script" uid="uid://b2of6q8q1shii" path="res://scripts/player/player.gd" id="1_2f2x5"]
[ext_resource type="Script" uid="uid://b67tcp8o1v24s" path="res://scripts/player/camera_controller.gd" id="2_23lc7"]
[ext_resource type="PackedScene" uid="uid://est52k614w50" path="res://assets/models/player/librarian_player.tscn" id="2_cf5dp"]
[ext_resource type="Script" uid="uid://bbd3l6wa0gptn" path="res://scripts/player/movement.gd" id="4_o2lce"]
[ext_resource type="Script" uid="uid://bcg1etexxg0p1" path="res://scripts/player/dash.gd" id="5_0dcju"]
[ext_resource type="Script" uid="uid://dkwymbe0v5ypi" path="res://scripts/components/health.gd" id="6_gp4iy"]
[ext_resource type="Script" uid="uid://byl3xrxfqqlki" path="res://scripts/player/death.gd" id="6_wjwua"]
[ext_resource type="Script" uid="uid://y01rvetq2lvm" path="res://scripts/player/parry.gd" id="8_isdoy"]
[ext_resource type="Script" uid="uid://cqbjxiq37yaim" path="res://scripts/player/interact.gd" id="8_ve6hn"]
[ext_resource type="Script" uid="uid://bvu0xg2ghy8qn" path="res://scripts/player/player_attack.gd" id="8_yyof3"]
[ext_resource type="PackedScene" uid="uid://x7inf5bnoarf" path="res://core/audio/scenes/footstep_sounds.tscn" id="9_rb7uo"]
[ext_resource type="Script" uid="uid://dlbkny711u164" path="res://scripts/player/hurt.gd" id="9_tbwpv"]
[ext_resource type="Script" uid="uid://b15uemiuovvjh" path="res://scripts/general/damage_flicker.gd" id="13_688dn"]
[ext_resource type="Script" uid="uid://cujkjntgqfiu" path="res://scripts/player/nearby_enemy_tracker.gd" id="14_ugbui"]

[sub_resource type="SphereShape3D" id="SphereShape3D_fcs02"]
radius = 3.09214

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_o8gvb"]
radius = 0.378927

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_aukdx"]
xfade_time = 0.2
input_0/name = "Movement"
input_0/auto_advance = false
input_0/break_loop_at_end = false
input_0/reset = true
input_1/name = "Block"
input_1/auto_advance = false
input_1/break_loop_at_end = false
input_1/reset = true
input_2/name = "Attack"
input_2/auto_advance = true
input_2/break_loop_at_end = false
input_2/reset = true

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bp60e"]
animation = &"Dash"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gvmui"]
animation = &"Attack1"

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_aea6o"]
filter_enabled = true
filters = ["LibrarianArmature/Skeleton3D:Ankle.L", "LibrarianArmature/Skeleton3D:Ankle.R", "LibrarianArmature/Skeleton3D:Arm.L", "LibrarianArmature/Skeleton3D:Arm.L.001", "LibrarianArmature/Skeleton3D:Foot.L", "LibrarianArmature/Skeleton3D:Foot.R", "LibrarianArmature/Skeleton3D:Hand.L", "LibrarianArmature/Skeleton3D:Hand.L.001", "LibrarianArmature/Skeleton3D:Hand.L.002", "LibrarianArmature/Skeleton3D:Hand.L.003", "LibrarianArmature/Skeleton3D:Hand.L.004", "LibrarianArmature/Skeleton3D:Leg.L", "LibrarianArmature/Skeleton3D:Leg.L.001", "LibrarianArmature/Skeleton3D:Leg.R", "LibrarianArmature/Skeleton3D:Leg.R.001", "LibrarianArmature/Skeleton3D:MiddleF.L", "LibrarianArmature/Skeleton3D:MiddleF.L.001", "LibrarianArmature/Skeleton3D:MiddleF.L.002", "LibrarianArmature/Skeleton3D:Pelvis.001.L", "LibrarianArmature/Skeleton3D:Pelvis.001.R", "LibrarianArmature/Skeleton3D:Pinky.L", "LibrarianArmature/Skeleton3D:Pinky.L.001", "LibrarianArmature/Skeleton3D:Pinky.L.002", "LibrarianArmature/Skeleton3D:PointerF.L", "LibrarianArmature/Skeleton3D:PointerF.L.001", "LibrarianArmature/Skeleton3D:PointerF.L.002", "LibrarianArmature/Skeleton3D:RingF.L", "LibrarianArmature/Skeleton3D:RingF.L.001", "LibrarianArmature/Skeleton3D:RingF.L.002", "LibrarianArmature/Skeleton3D:Shoulder.L", "LibrarianArmature/Skeleton3D:Thumb.L"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_b5gd1"]
graph_offset = Vector2(-236.221, 40.5493)
nodes/Animation/node = SubResource("AnimationNodeAnimation_bp60e")
nodes/Animation/position = Vector2(-80, 220)
nodes/Attack1/node = SubResource("AnimationNodeAnimation_gvmui")
nodes/Attack1/position = Vector2(-80, 20)
nodes/Blend2/node = SubResource("AnimationNodeBlend2_aea6o")
nodes/Blend2/position = Vector2(120, 80)
nodes/output/position = Vector2(340, 100)
node_connections = [&"Blend2", 0, &"Attack1", &"Blend2", 1, &"Animation", &"output", 0, &"Blend2"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gf26l"]
animation = &"Attack2"

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_1g8nc"]
filter_enabled = true
filters = ["LibrarianArmature/Skeleton3D:Ankle.L", "LibrarianArmature/Skeleton3D:Ankle.R", "LibrarianArmature/Skeleton3D:Arm.L", "LibrarianArmature/Skeleton3D:Arm.L.001", "LibrarianArmature/Skeleton3D:Foot.L", "LibrarianArmature/Skeleton3D:Foot.R", "LibrarianArmature/Skeleton3D:Hand.L", "LibrarianArmature/Skeleton3D:Hand.L.001", "LibrarianArmature/Skeleton3D:Hand.L.002", "LibrarianArmature/Skeleton3D:Hand.L.003", "LibrarianArmature/Skeleton3D:Hand.L.004", "LibrarianArmature/Skeleton3D:Leg.L", "LibrarianArmature/Skeleton3D:Leg.L.001", "LibrarianArmature/Skeleton3D:Leg.R", "LibrarianArmature/Skeleton3D:Leg.R.001", "LibrarianArmature/Skeleton3D:MiddleF.L", "LibrarianArmature/Skeleton3D:MiddleF.L.001", "LibrarianArmature/Skeleton3D:MiddleF.L.002", "LibrarianArmature/Skeleton3D:Pelvis.001.L", "LibrarianArmature/Skeleton3D:Pelvis.001.R", "LibrarianArmature/Skeleton3D:Pinky.L", "LibrarianArmature/Skeleton3D:Pinky.L.001", "LibrarianArmature/Skeleton3D:Pinky.L.002", "LibrarianArmature/Skeleton3D:PointerF.L", "LibrarianArmature/Skeleton3D:PointerF.L.001", "LibrarianArmature/Skeleton3D:PointerF.L.002", "LibrarianArmature/Skeleton3D:RingF.L", "LibrarianArmature/Skeleton3D:RingF.L.001", "LibrarianArmature/Skeleton3D:RingF.L.002", "LibrarianArmature/Skeleton3D:Shoulder.L", "LibrarianArmature/Skeleton3D:Thumb.L"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qtyvx"]
animation = &"Dash"

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_ycpfk"]
graph_offset = Vector2(-259, 3)
nodes/Attack2/node = SubResource("AnimationNodeAnimation_gf26l")
nodes/Attack2/position = Vector2(-20, 120)
nodes/Blend2/node = SubResource("AnimationNodeBlend2_1g8nc")
nodes/Blend2/position = Vector2(180, 140)
nodes/Walk/node = SubResource("AnimationNodeAnimation_qtyvx")
nodes/Walk/position = Vector2(-20, 260)
nodes/output/position = Vector2(360, 100)
node_connections = [&"Blend2", 0, &"Attack2", &"Blend2", 1, &"Walk", &"output", 0, &"Blend2"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_sg2uo"]
animation = &"Dash"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mkx1r"]
animation = &"Attack3"

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_rhubi"]
filter_enabled = true
filters = ["", "LibrarianArmature/Skeleton3D:Ankle.L", "LibrarianArmature/Skeleton3D:Ankle.R", "LibrarianArmature/Skeleton3D:Foot.L", "LibrarianArmature/Skeleton3D:Foot.R", "LibrarianArmature/Skeleton3D:Leg.L", "LibrarianArmature/Skeleton3D:Leg.L.001", "LibrarianArmature/Skeleton3D:Leg.R", "LibrarianArmature/Skeleton3D:Leg.R.001", "LibrarianArmature/Skeleton3D:Pelvis.001.L", "LibrarianArmature/Skeleton3D:Pelvis.001.R"]

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_sa1jb"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_uhhhn"]
graph_offset = Vector2(-235.594, 22.6414)
nodes/Animation/node = SubResource("AnimationNodeAnimation_sg2uo")
nodes/Animation/position = Vector2(-120, 260)
nodes/Attack3/node = SubResource("AnimationNodeAnimation_mkx1r")
nodes/Attack3/position = Vector2(20, 80)
nodes/Blend2/node = SubResource("AnimationNodeBlend2_rhubi")
nodes/Blend2/position = Vector2(200, 100)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_sa1jb")
nodes/TimeScale/position = Vector2(40, 240)
nodes/output/position = Vector2(360, 120)
node_connections = [&"Blend2", 0, &"Attack3", &"Blend2", 1, &"TimeScale", &"TimeScale", 0, &"Animation", &"output", 0, &"Blend2"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ah20k"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fr1ws"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xc8bj"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8l3x1"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_slleq"]
allow_transition_to_self = true
states/Attack1/node = SubResource("AnimationNodeBlendTree_b5gd1")
states/Attack1/position = Vector2(295, 97)
states/Attack2/node = SubResource("AnimationNodeBlendTree_ycpfk")
states/Attack2/position = Vector2(457, 97)
states/Attack3/node = SubResource("AnimationNodeBlendTree_uhhhn")
states/Attack3/position = Vector2(614, 98)
states/End/position = Vector2(765, 97)
states/Start/position = Vector2(146, 100)
transitions = ["Start", "Attack1", SubResource("AnimationNodeStateMachineTransition_ah20k"), "Attack1", "Attack2", SubResource("AnimationNodeStateMachineTransition_fr1ws"), "Attack2", "Attack3", SubResource("AnimationNodeStateMachineTransition_xc8bj"), "Attack3", "End", SubResource("AnimationNodeStateMachineTransition_8l3x1")]
graph_offset = Vector2(-60, 10)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jgnom"]
animation = &"Block"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wtw4s"]
animation = &"Dash"

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_gx1jg"]

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_gx1jg"]
fadeout_time = 0.5
break_loop_at_end = true

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3qmvb"]
animation = &"Die"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_t822e"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_t88nt"]
animation = &"Idle2"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_04si1"]
animation = &"Idle2"
use_custom_timeline = true
timeline_length = 6.983
stretch_time_scale = false
start_offset = 1.017
loop_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_g1nko"]
animation = &"Walk"
use_custom_timeline = true
timeline_length = 1.2
stretch_time_scale = true
start_offset = 0.0
loop_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_irwu0"]
animation = &"Run"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_uui88"]
blend_point_0/node = SubResource("AnimationNodeAnimation_g1nko")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_irwu0")
blend_point_1/pos = 10.0
min_space = 0.0
max_space = 10.0
snap = 1.0

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_80sis"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cvjas"]
xfade_time = 0.2
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_t6lsx"]
xfade_time = 0.2
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nfe88"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_v7bbg"]
reset_ends = true
states/End/position = Vector2(725, 58)
states/Idle/node = SubResource("AnimationNodeAnimation_t822e")
states/Idle/position = Vector2(301, 28)
states/Idle2/node = SubResource("AnimationNodeAnimation_t88nt")
states/Idle2/position = Vector2(409, 28)
states/Idle3/node = SubResource("AnimationNodeAnimation_04si1")
states/Idle3/position = Vector2(518, 28)
states/Start/position = Vector2(146, 65)
states/Walk/node = SubResource("AnimationNodeBlendSpace1D_uui88")
states/Walk/position = Vector2(311.75, 128)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_80sis"), "Idle", "Idle2", SubResource("AnimationNodeStateMachineTransition_cvjas"), "Idle2", "Idle3", SubResource("AnimationNodeStateMachineTransition_t6lsx"), "Start", "Walk", SubResource("AnimationNodeStateMachineTransition_nfe88")]
graph_offset = Vector2(-3.25, -59)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_y53u5"]
animation = &"Ouchie"

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_4yo1v"]
xfade_time = 0.2
input_0/name = "Ouchie"
input_0/auto_advance = true
input_0/break_loop_at_end = false
input_0/reset = true
input_1/name = "Can_move"
input_1/auto_advance = false
input_1/break_loop_at_end = false
input_1/reset = true
input_2/name = "Death"
input_2/auto_advance = false
input_2/break_loop_at_end = false
input_2/reset = true

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_yv458"]
graph_offset = Vector2(-303.357, 41.946)
nodes/Actions/node = SubResource("AnimationNodeTransition_aukdx")
nodes/Actions/position = Vector2(140, 160)
nodes/Attack/node = SubResource("AnimationNodeStateMachine_slleq")
nodes/Attack/position = Vector2(-220, 360)
nodes/Block/node = SubResource("AnimationNodeAnimation_jgnom")
nodes/Block/position = Vector2(-480, 140)
nodes/Dash/node = SubResource("AnimationNodeAnimation_wtw4s")
nodes/Dash/position = Vector2(260, 660)
nodes/DashScale/node = SubResource("AnimationNodeTimeScale_gx1jg")
nodes/DashScale/position = Vector2(520, 560)
nodes/DashShot/node = SubResource("AnimationNodeOneShot_gx1jg")
nodes/DashShot/position = Vector2(800, 240)
nodes/Die/node = SubResource("AnimationNodeAnimation_3qmvb")
nodes/Die/position = Vector2(140, 460)
nodes/Movement/node = SubResource("AnimationNodeStateMachine_v7bbg")
nodes/Movement/position = Vector2(-140, 40)
nodes/Ouchie/node = SubResource("AnimationNodeAnimation_y53u5")
nodes/Ouchie/position = Vector2(100, -100)
nodes/Transition/node = SubResource("AnimationNodeTransition_4yo1v")
nodes/Transition/position = Vector2(460, 120)
nodes/output/position = Vector2(1240, 140)
node_connections = [&"Actions", 0, &"Movement", &"Actions", 1, &"Block", &"Actions", 2, &"Attack", &"DashScale", 0, &"Dash", &"DashShot", 0, &"Transition", &"DashShot", 1, &"DashScale", &"Transition", 0, &"Ouchie", &"Transition", 1, &"Actions", &"Transition", 2, &"Die", &"output", 0, &"DashShot"]

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("initial_state", "death_state", "hurt_state") groups=["player"]]
collision_layer = 2
script = ExtResource("1_2f2x5")
decceleration = 10.0
initial_state = NodePath("StateMachine/Movement")
death_state = NodePath("StateMachine/Death")
hurt_state = NodePath("StateMachine/Hurt")

[node name="LibrarianPlayer" parent="." instance=ExtResource("2_cf5dp")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)

[node name="Skeleton3D" parent="LibrarianPlayer/LibrarianArmature" index="0"]
bones/0/position = Vector3(0, 1.3118, 0)
bones/0/rotation = Quaternion(0.105869, 0, -2.49194e-17, 0.99438)
bones/1/rotation = Quaternion(2.93341e-09, -0.308416, -4.91427e-10, 0.951252)
bones/2/rotation = Quaternion(0.180213, 0.408909, -0.0862775, 0.890434)
bones/3/rotation = Quaternion(0.0937249, 0.043707, -0.0784867, 0.991537)
bones/4/rotation = Quaternion(-0.222025, -0.151511, 0.070919, 0.960583)
bones/5/rotation = Quaternion(0.00723127, -9.4479e-10, 3.57993e-09, 0.999974)
bones/8/rotation = Quaternion(-0.246921, 0.0475564, -0.777187, 0.576844)
bones/9/rotation = Quaternion(0.0187286, 0.153243, -0.386431, 0.909306)
bones/10/rotation = Quaternion(0.316042, -0.0414916, 0.00955738, 0.947789)
bones/11/rotation = Quaternion(0.257123, 0.0267992, -0.0487894, 0.964774)
bones/12/rotation = Quaternion(-0.280558, -0.0345168, -0.173232, 0.943444)
bones/13/rotation = Quaternion(0.00352418, 0.00144437, -0.0475896, 0.99886)
bones/14/rotation = Quaternion(-0.0571946, -0.0110221, -0.0959842, 0.993677)
bones/15/rotation = Quaternion(-0.0403513, -0.086508, -0.284835, 0.953812)
bones/16/rotation = Quaternion(0.00612823, 0.0168867, -0.120676, 0.992529)
bones/17/rotation = Quaternion(-0.0694086, 0.00341139, -0.0580925, 0.99589)
bones/18/rotation = Quaternion(-0.0577743, -0.000434621, -0.094227, 0.993873)
bones/19/rotation = Quaternion(-0.0103291, -0.0484397, -0.29552, 0.954052)
bones/20/rotation = Quaternion(-0.00447886, 0.0208872, -0.120415, 0.992494)
bones/21/rotation = Quaternion(-0.154067, 0.00730074, -0.0602808, 0.986193)
bones/22/rotation = Quaternion(-0.016538, 0.00617969, -0.0948096, 0.995339)
bones/23/rotation = Quaternion(-0.00421679, -0.0187958, -0.301148, 0.953383)
bones/24/rotation = Quaternion(-0.0121816, 0.0211498, -0.120351, 0.992431)
bones/25/rotation = Quaternion(-0.246311, 0.0104377, -0.0640596, 0.967015)
bones/26/rotation = Quaternion(0.0741584, 0.0113054, -0.0916764, 0.992959)
bones/27/rotation = Quaternion(-0.0465311, -0.00122616, -0.302602, 0.95198)
bones/28/rotation = Quaternion(0.0168239, 0.0232218, -0.119874, 0.992375)
bones/29/rotation = Quaternion(-0.0325473, 0.372923, 0.641178, 0.669896)
bones/30/rotation = Quaternion(0.257467, 0.0287218, 0.00799478, 0.965827)
bones/31/rotation = Quaternion(0.104609, 0.100793, -0.0454308, 0.988349)
bones/32/rotation = Quaternion(-0.0167319, 0.69429, 0.148012, 0.704113)
bones/33/rotation = Quaternion(-0.332335, -0.106395, 0.0175419, 0.936977)
bones/34/rotation = Quaternion(-0.354354, 0.494881, 0.115655, 0.784952)
bones/35/rotation = Quaternion(-0.137392, 0.171973, 0.65792, 0.720201)
bones/36/rotation = Quaternion(-0.0843898, 0.0544615, 0.207589, 0.973046)
bones/37/rotation = Quaternion(-0.0770627, 0.0107426, 0.511927, 0.855498)
bones/38/position = Vector3(-0.027205, 0.0737098, -0.0287055)
bones/38/rotation = Quaternion(0.37746, -0.567208, -0.329389, 0.653683)
bones/38/scale = Vector3(1, 1, 1)
bones/39/rotation = Quaternion(-0.405865, 0.487541, 0.150047, 0.75833)
bones/40/rotation = Quaternion(-0.120366, 0.102876, 0.66585, 0.72909)
bones/41/rotation = Quaternion(-0.0591338, 0.043324, 0.207721, 0.975437)
bones/42/rotation = Quaternion(-0.0936462, -0.00609922, 0.510742, 0.854597)
bones/43/rotation = Quaternion(-0.467549, 0.473514, 0.19827, 0.719633)
bones/44/rotation = Quaternion(-0.0686717, 0.048005, 0.669899, 0.737709)
bones/45/rotation = Quaternion(-0.0551966, 0.0424048, 0.206701, 0.975925)
bones/46/rotation = Quaternion(-0.107595, -0.00720774, 0.509027, 0.853969)
bones/47/rotation = Quaternion(-0.529927, 0.457399, 0.253827, 0.667484)
bones/48/rotation = Quaternion(0.00666945, 0.00344687, 0.667661, 0.744427)
bones/49/rotation = Quaternion(-0.0986002, 0.038227, 0.272695, 0.956271)
bones/50/rotation = Quaternion(-0.0890761, -0.0061852, 0.302664, 0.948906)
bones/53/position = Vector3(0, 1.3118, 0)
bones/53/rotation = Quaternion(-0.346191, -0.532778, -0.452453, 0.625768)
bones/54/rotation = Quaternion(-0.811163, -0.202782, 0.0364257, 0.547328)
bones/55/rotation = Quaternion(0.0557725, -0.0224098, 0.182843, 0.981303)
bones/56/rotation = Quaternion(0.0254161, 0.00224022, -0.0877239, 0.995818)
bones/57/rotation = Quaternion(-0.000120804, 1.83651e-07, -0.671773, 0.740757)
bones/59/position = Vector3(0, 1.3118, 0)
bones/59/rotation = Quaternion(-0.302684, 0.614013, 0.541055, 0.488497)
bones/60/rotation = Quaternion(-0.726244, 0.35503, -0.141483, 0.571406)
bones/61/rotation = Quaternion(0.0316847, 0.000610401, -0.251796, 0.967261)
bones/62/rotation = Quaternion(0.0254161, -0.00224023, 0.0877239, 0.995818)
bones/63/rotation = Quaternion(-0.000120801, -1.85313e-07, 0.671773, 0.740757)

[node name="Cylinder_001" parent="LibrarianPlayer/LibrarianArmature/Skeleton3D" index="0"]
transform = Transform3D(0.0346061, -0.000989748, 0.00263031, -0.000662706, 0.000504946, 0.0361771, -0.0121673, -0.00284252, 0.00551064, 0.163866, 2.16874, 0.519793)

[node name="Hair" parent="LibrarianPlayer/LibrarianArmature/Skeleton3D" index="1"]
transform = Transform3D(0.172874, 0.0166632, 0.0128773, -0.010832, 0.229184, -0.0358613, -0.0114034, 0.0349103, 0.229281, 0.106489, 2.26055, 0.403009)

[node name="BoneAttachment3D" parent="LibrarianPlayer/LibrarianArmature/Skeleton3D" index="3"]
transform = Transform3D(0.166129, -0.0709004, 0.983552, 0.963737, 0.222903, -0.146714, -0.208835, 0.972259, 0.10536, -0.124048, 1.71534, 1.2147)

[node name="NearbyEnemyTracker" type="Area3D" parent="LibrarianPlayer"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
collision_layer = 2
collision_mask = 4
script = ExtResource("14_ugbui")

[node name="CollisionShape3D" type="CollisionShape3D" parent="LibrarianPlayer/NearbyEnemyTracker"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25, -2.4844)
shape = SubResource("SphereShape3D_fcs02")

[node name="Collision" type="CollisionShape3D" parent="." groups=["player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_o8gvb")

[node name="CamRoot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
script = ExtResource("2_23lc7")

[node name="SpringArm3D" type="SpringArm3D" parent="CamRoot"]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 0, 0)
collision_mask = 0
spring_length = 25.0

[node name="Camera3D" type="Camera3D" parent="CamRoot/SpringArm3D"]
doppler_tracking = 2
fov = 35.0

[node name="StateMachine" type="Node" parent="."]

[node name="Movement" type="Node" parent="StateMachine" node_paths=PackedStringArray("dash_state", "attack_state", "parry_state")]
script = ExtResource("4_o2lce")
dash_state = NodePath("../Dash")
attack_state = NodePath("../Attack")
parry_state = NodePath("../Parry")
move_speed = 10.0
acceleration = 6.0

[node name="Dash" type="Node" parent="StateMachine" node_paths=PackedStringArray("movement_state")]
script = ExtResource("5_0dcju")
movement_state = NodePath("../Movement")
dash_layer = 8

[node name="Death" type="Node" parent="StateMachine" node_paths=PackedStringArray("umbrella")]
script = ExtResource("6_wjwua")
umbrella = NodePath("../../LibrarianPlayer/LibrarianArmature/Skeleton3D/BoneAttachment3D/Umbrella")

[node name="Attack" type="Node" parent="StateMachine" node_paths=PackedStringArray("player", "movement_state", "next_attack")]
script = ExtResource("8_yyof3")
player = NodePath("../..")
movement_state = NodePath("../Movement")
next_attack = NodePath("../Attack2")
distance = 0.15
swing_duration = 0.2
wind_down_period = 0.1
sound_effect_name = "player_attack"
animation_node_name = "Attack1"

[node name="Attack2" type="Node" parent="StateMachine" node_paths=PackedStringArray("player", "movement_state", "next_attack")]
script = ExtResource("8_yyof3")
player = NodePath("../..")
movement_state = NodePath("../Movement")
next_attack = NodePath("../AttackBig")
distance = 0.15
wind_up_period = 0.083
swing_duration = 0.2
wind_down_period = 0.1
sound_effect_name = "player_attack_2"
animation_node_name = "Attack2"

[node name="AttackBig" type="Node" parent="StateMachine" node_paths=PackedStringArray("player", "movement_state")]
script = ExtResource("8_yyof3")
player = NodePath("../..")
movement_state = NodePath("../Movement")
damage = 3
distance = 4.0
wind_up_period = 0.2
swing_duration = 0.2
wind_down_period = 0.01
sound_effect_name = "player_attack_3"
animation_node_name = "Attack3"

[node name="Parry" type="Node" parent="StateMachine" node_paths=PackedStringArray("movement_state", "block_area", "animation_player")]
script = ExtResource("8_isdoy")
movement_state = NodePath("../Movement")
parry_duration = 1.01
block_area = NodePath("../../LibrarianPlayer/LibrarianArmature/Skeleton3D/BoneAttachment3D/Umbrella/UnfoldedArea")
animation_player = NodePath("../../LibrarianPlayer/LibrarianArmature/Skeleton3D/BoneAttachment3D/Umbrella/Model/AnimationPlayer")
unfold_anim = "UmbrellaUnfold"

[node name="Hurt" type="Node" parent="StateMachine" node_paths=PackedStringArray("movement_state", "player_health")]
script = ExtResource("9_tbwpv")
movement_state = NodePath("../Movement")
hurt_time = 0.25
player_health = NodePath("../../Health")

[node name="Health" type="Node" parent="." node_paths=PackedStringArray("damage_flicker")]
script = ExtResource("6_gp4iy")
damage_flicker = NodePath("../DamageFlicker")

[node name="Interact" type="Node" parent="."]
script = ExtResource("8_ve6hn")

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../LibrarianPlayer")
tree_root = SubResource("AnimationNodeBlendTree_yv458")
anim_player = NodePath("../LibrarianPlayer/AnimationPlayer")
parameters/Actions/current_state = "Attack"
parameters/Actions/transition_request = ""
parameters/Actions/current_index = 2
parameters/Attack/Attack1/Blend2/blend_amount = 0.3
parameters/Attack/Attack2/Blend2/blend_amount = 0.3
parameters/Attack/Attack3/Blend2/blend_amount = 1.0
parameters/Attack/Attack3/TimeScale/scale = 0.5
parameters/DashScale/scale = 1.0
parameters/DashShot/active = false
parameters/DashShot/internal_active = false
parameters/DashShot/request = 0
parameters/Movement/Walk/blend_position = 0.0
parameters/Transition/current_state = "Can_move"
parameters/Transition/transition_request = ""
parameters/Transition/current_index = 1

[node name="FootstepSounds" parent="." instance=ExtResource("9_rb7uo")]
pitch_randomness = 1.0
play_on_ready = false

[node name="DamageFlicker" type="Node" parent="." node_paths=PackedStringArray("mesh_array")]
script = ExtResource("13_688dn")
mesh_array = [null, null, null, null]

[editable path="LibrarianPlayer"]
[editable path="LibrarianPlayer/LibrarianArmature/Skeleton3D/BoneAttachment3D/Umbrella"]
[editable path="LibrarianPlayer/LibrarianArmature/Skeleton3D/BoneAttachment3D/Umbrella/Model"]
